--- a/app/templates/app_home.html
+++ b/app/templates/app_home.html
@@ -487,7 +487,7 @@
     /* width: 90%; */
     /* margin-left: 5%; */
     border: 1px solid;
-    background-color: #fffa5c85;
+    background-color: #f9e92547;
 
   }
 
@@ -677,30 +677,34 @@
                 },
               
               ticks: {
-                suggestedMax: 40,
+                // suggestedMax: 40,
                 suggestedMin: 0,
-                stepSize: 10,
+                stepSize: 1,
                 fontSize: 23,
+                fontFamily: 'Kiwi Maru',
+                fontColor: '#122',
               }
             }],
 
             xAxes: [{
-              // scaleLabel: {
+              scaleLabel: {
                 // display: true,
                 // labelString: '睡眠時間',
-                // fontSize: 25,
-                // fontColor: '#122',
-                // fontStyle: 'middium',
-                // fontFamily: 'Kiwi Maru',
+                fontSize: 23,
+                fontColor: '#122',
+                fontStyle: 'middium',
+                fontFamily: 'Kiwi Maru',
                 // padding: 20,
                 // usePointStyle: True,
-                // },
+                },
               
               ticks: {
                 // suggestedMax: 40,
                 // suggestedMin: 0,
                 // stepSize: 10,
                 fontSize: 23,
+                fontFamily: 'Kiwi Maru',
+                fontColor: '#122',
               }
             }]
           }
@@ -771,30 +775,34 @@
                 },
               
               ticks: {
-                suggestedMax: 40,
+                // suggestedMax: 40,
                 suggestedMin: 0,
-                stepSize: 10,
+                stepSize: 5,
                 fontSize: 23,
+                fontFamily: 'Kiwi Maru',
+                fontColor: '#122',
               }
             }],
 
             xAxes: [{
-              // scaleLabel: {
+              scaleLabel: {
                 // display: true,
                 // labelString: '睡眠時間',
-                // fontSize: 25,
-                // fontColor: '#122',
-                // fontStyle: 'middium',
-                // fontFamily: 'Kiwi Maru',
+                fontSize: 23,
+                fontColor: '#122',
+                fontStyle: 'middium',
+                fontFamily: 'Kiwi Maru',
                 // padding: 20,
                 // usePointStyle: True,
-                // },
+                },
               
               ticks: {
                 // suggestedMax: 40,
                 // suggestedMin: 0,
                 // stepSize: 10,
                 fontSize: 23,
+                fontFamily: 'Kiwi Maru',
+                fontColor: '#122',
               }
             }]
           }
@@ -865,30 +873,35 @@
                 },
               
               ticks: {
-                suggestedMax: 40,
+                // suggestedMax: 40,
                 suggestedMin: 0,
-                stepSize: 10,
+                stepSize: 2,
                 fontSize: 23,
+                fontFamily: 'Kiwi Maru',
+                fontColor: '#122',
               }
             }],
 
             xAxes: [{
-              // scaleLabel: {
+              scaleLabel: {
                 // display: true,
                 // labelString: '睡眠時間',
-                // fontSize: 25,
-                // fontColor: '#122',
-                // fontStyle: 'middium',
-                // fontFamily: 'Kiwi Maru',
+                fontSize: 23,
+                fontColor: '#122',
+                fontStyle: 'middium',
+                fontFamily: 'Kiwi Maru',
                 // padding: 20,
                 // usePointStyle: True,
-                // },
+                },
               
               ticks: {
                 // suggestedMax: 40,
                 // suggestedMin: 0,
                 // stepSize: 10,
+                // fontSize: 23,
                 fontSize: 23,
+                fontFamily: 'Kiwi Maru',
+                fontColor: '#122',
               }
             }]
           }
