--- a/app/templates/app_home.html
+++ b/app/templates/app_home.html
@@ -565,7 +565,7 @@
         <li class="list-group-item">運動時間の合計:&nbsp;{{item.training_time}}&nbsp;時間</li>
         <li class="list-group-item">体幹トレーニング:&nbsp;{{item.stability_time}}&nbsp;分</li>
         <li class="list-group-item">ストレッチ:&nbsp;{{item.stretch_time}}&nbsp;分</li>
-        <li class="list-group-item">睡眠時間:{{item.sleeping_hours}}&nbsp;時間</li>
+        <li class="list-group-item">睡眠時間:&nbsp;{{item.sleeping_hours}}&nbsp;時間</li>
       </ul>
     </div>
   {% endfor %}
