--- a/app/templates/app_home.html
+++ b/app/templates/app_home.html
@@ -109,8 +109,12 @@
   }
 
   a:hover {
-    color: #991e29;
-    text-decoration: none;
+    color: #991e29 !important;
+    text-decoration: none !important;
+  }
+
+  a {
+    color: #25477a !important;
   }
 
   .card-header {
@@ -414,7 +418,7 @@
   </div>
   <div class="card-footer">
     <!-- 期限:&nbsp;2月25日まで残り<span class="purple">32</span>日 -->
-    気合い入れていこう!!
+    気合い入れていきましょう!!
   </div>
 </div>
 
