fix_some_points

--- a/app/templates/app_staff_detail.html
+++ b/app/templates/app_staff_detail.html
@@ -454,8 +454,7 @@
   <div class="card-body">
     <h5 class="card-title">{{object.title}}</h5>
     <p class="card-text">{{object.staff}}</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
-    <a href="{{request.META.HTTP_REFERER}}" class="btn btn-primary" tabindex="-1" role="button" aria-disabled="true">戻る</a>
+    <a href="{{request.META.HTTP_REFERER}}" class="btn btn-outline-primary" tabindex="-1" role="button" aria-disabled="true">戻る</a>
   </div>
   <!-- <div class="card-footer text-muted">
     2 days ago
