--- a/app/templates/app_week_detail.html
+++ b/app/templates/app_week_detail.html
@@ -439,11 +439,11 @@
   <div class="card-header">
     今週の振り返り
   </div>
+  
   <div class="card-body">
     <h5 class="card-title">{{object.title}}</h5>
     <p class="card-text">{{object.summary}}</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
-    <a href="{{request.META.HTTP_REFERER}}" class="btn btn-primary" tabindex="-1" role="button" aria-disabled="true">戻る</a>
+    <a href="{{request.META.HTTP_REFERER}}" class="btn btn-outline-primary" tabindex="-1" role="button" aria-disabled="true">戻る</a>
   </div>
 </div>
 
