add_staff_update

--- a/app/templates/app_home.html
+++ b/app/templates/app_home.html
@@ -955,7 +955,7 @@
 
 {% for item in staff %}
 <div class="card text-center mt-5">
-  <a href="{% url 's_detail' item.pk %}" class="link"></a>
+  <a href="{% url 's_update' item.pk %}" class="link"></a>
   <div class="card-header">
     スタッフから
   </div>
