add_week_update_#93

--- a/app/templates/app_home.html
+++ b/app/templates/app_home.html
@@ -624,7 +624,7 @@
 
 {% for item in week %}
 <div class="card text-center mt-5">
-  <a href="{% url 'w_detail' item.pk %}" class="link"></a>
+  <a href="{% url 'w_update' item.pk %}" class="link"></a>
   <div class="card-header">
     今週の振り返り
   </div>
