--- a/app/templates/app_card_detail.html
+++ b/app/templates/app_card_detail.html
@@ -19,31 +19,31 @@
     height: 100%;
   }
 
-  .hero {
-  display: flex;
-  justify-content: center;
-  object-fit: cover;
+.hero {
+    display: flex;
+    justify-content: center;
+    object-fit: cover;
   }
 
-  img {
-  vertical-align: middle;
-  border-style: none;
-  width: 100%;
-  height: 730px;
-  object-fit: cover;
+img {
+    vertical-align: middle;
+    border-style: none;
+    width: 100%;
+    height: 730px;
+    object-fit: cover;
   }
 
-  .justify-content-center {
-  justify-content: center!important;
-  align-items: center;
+.justify-content-center {
+    justify-content: center!important;
+    align-items: center;
   }
 
-  .hero {
+.hero {
     position: relative;
     margin-bottom: 120px;
   }
 
-  .hero__title {
+.hero__title {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -53,9 +53,9 @@
     z-index: 2;
     text-shadow:6px 6px 0px black;
     white-space: nowrap;
-   }
+  }
   
-  .header__inner {
+.header__inner {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -65,24 +65,24 @@
     height: 100px;
    }
 
-  .header__inner .logo {
+.header__inner .logo {
     font-size: 50px;
     justify-content: center;
     white-space: nowrap;
-   }
+  }
 
-  .header__inner img {
+.header__inner img {
     height: 120px;
     width: 120px;
    }
   
-  .header__li {
+.header__li {
     padding: 0;
     margin-left: 30px;
     font-size: 20px;
    }
   
-  .header__ul {
+.header__ul {
     display: flex;
     padding: 0;
     margin: 0;
@@ -90,24 +90,22 @@
     align-items: center;
   }
 
-  .header {
-    /* top: 0;
-    left: 0; */
+.header {
     width: 100%;
     height: 100px;
     display: flex;
     align-items: center;
   }
 
-  .detail {
+.detail {
     background-color: lavenderblush;
   }
 
-  .purple {
+.purple {
     color: rgb(167, 62, 62);
   }
 
-  .text-center {
+.text-center {
     text-align: center!important;
     width: 90%;
     margin: 0 auto;
@@ -117,7 +115,7 @@
     /* cursor: pointer; */
   }
 
-  .text-center .link {
+.text-center .link {
     display: block;
     position: absolute;
     top: 0;
@@ -126,31 +124,30 @@
     height: 100%;
   }
 
-  a:hover {
+a:hover {
     color: #991e29;
     text-decoration: none;
   }
 
-  .card-header {
+.card-header {
     font-size: 30px;
-    /* background-color: #fff1f1; */
   }
 
-  .card-header.target {
+.card-header.target {
     font-size: 30px;
     background-color: #fff1f1;
     white-space: nowrap;
   }
 
-  .card-body {
+.card-body {
     position: relative;
   }
 
-  .card-footer {
+.card-footer {
     background-color: #fff1f1;
   }
 
-  iframe {
+iframe {
     width: 90%;
     position: relative;
     z-index: 10;
@@ -158,38 +155,38 @@
 
 
 
-  @media screen and (max-width: 1170px) {
-    .header__li.diary {
+@media screen and (max-width: 1170px) {
+  .header__li.diary {
       display: none;
     }
 
-    .hero__title {
+  .hero__title {
       font-size: 100px;
     }
 
-    img {
+  img {
       height: 620px;
     }
   }
 
-  @media screen and (max-width: 970px) {
-    .header__li {
+@media screen and (max-width: 970px) {
+  .header__li {
       display: none;
     }
 
-    .header__inner {
+  .header__inner {
       justify-content: center;
     }
 
-    .hero__title {
+  .hero__title {
       font-size: 80px;
     }
 
-    img {
+  img {
       height: 520px;
     }
 
-    .hero {
+  .hero {
     margin-bottom: 100px;
   }
 
@@ -198,7 +195,7 @@
   }
 
 
-  }
+}
 
   @media screen and (max-width: 770px) {
     .header__li {
@@ -387,6 +384,11 @@
     background-color: #fcfff080 !important;
   }
 
+  /* .card-deck {
+    margin-right: 0px !important;
+    margin-left: 0px !important;
+  } */
+
   .card-container {
     width: 90%;
     margin: 0 auto;
@@ -446,7 +448,7 @@
       <li class="list-group-item">運動時間の合計:&nbsp;{{object.training_time}}&nbsp;時間</li>
       <li class="list-group-item">体幹トレーニング:&nbsp;{{object.stability_time}}&nbsp;分</li>
       <li class="list-group-item">ストレッチ:&nbsp;{{object.stretch_time}}&nbsp;分</li>
-      <li class="list-group-item">睡眠時間:{{object.sleeping_hours}}&nbsp;時間</li>
+      <li class="list-group-item">睡眠時間:&nbsp;{{object.sleeping_hours}}&nbsp;時間</li>
     </ul>
   </div>
 </div>
