--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Kazuya-Portfolio</title>
     <meta name="description" content="ポートフォリオサイトを作製してみました。">
-    <link rel="shortcut icon" href="https://olympics.com/ja/olympic-games/tokyo-2020" type="image/x-icon">
+    <link rel="shortcut icon" href="https://www.joc.or.jp/" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles&family=Kiwi+Maru&display=swap" rel="stylesheet">
