fix_shorttarget_bug

--- a/app/templates/app_home.html
+++ b/app/templates/app_home.html
@@ -430,7 +430,7 @@
   </div>
   <div class="card-body">
     <h4 class="card-title">{{ item.short_target }}</h4>
-    <p class="card-text text-left">{{ item.middle_target_summary }}</p>
+    <p class="card-text text-left">{{ item.short_target_summary }}</p>
     <!-- <div class="wrapper"> -->
       <!-- <iframe class="content" width="560" height="315" src="https://www.youtube.com/embed/ZOFO_MzZi50" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
       {{ link_short | safe}}
